--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SpendLite V1</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="catpicker-modal.css">
@@ -76,7 +75,7 @@
       <div id="pager" class="pager"></div>
     </div>
 
-    <p class="tip"><small>Tip: click a <b>category</b> above to filter, or click "+" to add a rule for that merchant.</small></p>
+    <p class="tip"><small>Tip: click a <b>category</b> above to filter, or click “+” to add a rule for that merchant.</small></p>
   </section>
 </main>
 
